	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.
	* configure.ac: New file, generated from configure.in by autoupdate.

2001-09-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* mptests.am: Use TMPINSTALL_FILES = to make automake-1.5 happy.

2001-09-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* mp02/node2/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp02/node1/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp04/node2/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp04/node1/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp14/node2/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp14/node1/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp06/node2/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp06/node1/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp08/node2/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp08/node1/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp03/node2/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp03/node1/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp10/node2/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp10/node1/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp05/node2/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp05/node1/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp13/node2/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp13/node1/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp01/node2/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp01/node1/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp07/node2/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp07/node1/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp11/node2/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp11/node1/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp12/node2/Makefile.am: include leaf.am instead of leaf.cfg.
	* mp12/node1/Makefile.am: include leaf.am instead of leaf.cfg.