@@ -36,7 +36,7 @@ rtems_task Test_task2(
 #define CONFIGURE_APPLICATION_NEEDS_CONSOLE_DRIVER
 #define CONFIGURE_APPLICATION_NEEDS_CLOCK_DRIVER
 
-#define CONFIGURE_MAXIMUM_TASKS               2
+#define CONFIGURE_MAXIMUM_TASKS               3
 #if ( NODE_NUMBER == 1 )
 #define CONFIGURE_MAXIMUM_SEMAPHORES          1
 #define CONFIGURE_MAXIMUM_MESSAGE_QUEUES      1
