@@ -26,5 +26,5 @@ rtems_timer_service_routine Delayed_send_event(
   rtems_status_code status;
 
   status = rtems_event_send( Task_id[ 1 ], RTEMS_EVENT_16 );
-  directive_failed( status, "rtems_event_send" );
+  directive_failed_with_level( status, "rtems_event_send", 1 );
 }
