@@ -1,3 +1,12 @@
+2001-11-07	Joel Sherrill <joel@OARcorp.com>
+
+	Tracked as PR72 but related to the object id problem (PR36)
+	reported by Todor.Todorov@barco.com.
+	* mp03/delay.c: Dispatch disable level is actually 1 not 0.
+	* mp13/system.h: Configure enough tasks (CONFIGURE_MAXIMUM_TASKS=3).
+	* mp14/delay.c: Dispatch disable level may be arbitrarily > 0.
+2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
 	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
 	* configure.in: Remove.
 	* configure.ac: New file, generated from configure.in by autoupdate.
